# knowledge-base-system

./: .gitignore  WhaleExpertSystem.spec  pyproject.toml
app/: main.py
app/controllers/: __init__.py  assignment.py  completeness.py  description.py  ml_classifier.py  property.py  solver.py  species.py  value.py
app/models/: __init__.py  base.py  entities.py  seed.py
app/views/: role_selector.py
app/views/editor/: assignment.py  completeness.py  description.py  editor.py  properties.py  species.py  values.py
app/views/solver/: solver.py
